--- a/html/home.html
+++ b/html/home.html
@@ -1,25 +1,17 @@
-
-<html xmlns="http://www.w3.org/1999/xhtml" class="h-100">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Home</title>
 	</head>
-	<body class="d-flex flex-column h-100">
-		<main role="main" class="flex-shrink-0">
-			<div class="container">
-				<div id="splash" class="text-center w-75 mx-auto mt-5">
-					<h1>The <br />
-						<span class="text-primary">Algernon Charles Swinburne</span><br /> Project </h1>
-
-					<div>
-						<p class="text-smallcaps mb-4">Edited by John A. Walsh</p>
-						<hr class="w-50 mb-4 mx-auto" />
-						<p class="pb-0 mb-0"> “For the matter of it—I consent to much—I regret much—I blame or reject nothing. I should as soon think of finding fault with you as with a thundercloud or a nightshade blossom. All I can say
-of you or them—is that God made you, and that you are very wonderful and
-beautiful.” </p>
-						<p class="pb-0 mb-0 fs-80"> —John Ruskin, from a letter to Swinburne, commenting on the poet’s <cite>Poems and Ballads</cite>. </p>
-					</div>
-				</div>
-			</div>
-		</main>
+	<body>
+		<h1>The <em>Von Mueller Correspondence</em> Project</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut sollicitudin sapien. 
+		Mauris ac bibendum nisl. Nunc non tellus nec dolor viverra egestas ac id purus. 
+		Mauris rutrum odio non pretium dignissim. Suspendisse eget ligula quam. 
+		Mauris porttitor condimentum leo sed interdum. Morbi auctor ipsum dignissim sollicitudin suscipit. 
+		In varius magna vel augue pharetra tincidunt. Morbi placerat dolor in mollis egestas. 
+		Etiam in nunc nulla. Pellentesque augue nisi, blandit vitae eros eget, commodo suscipit orci. 
+		Quisque et risus venenatis, cursus nisl eu, euismod sem. Pellentesque lacus erat, 
+		ultricies et posuere sit amet, semper ut est. Sed efficitur ante accumsan, ullamcorper 
+		leo non, interdum velit. Mauris sit amet neque sed mi pretium convallis. </p>
 	</body>
 </html>
