update static pages

--- a/html/home.html
+++ b/html/home.html
@@ -7,21 +7,34 @@
 			div#home-page {
 				display: flex;
 				column-gap: 1rem; 
+				align-items: start;
 			}
 		</style>
 	</head>
 	<body>
 		<div id="home-page">
 			<img alt="" src="image/mueller_18_years.jpg" width="400" height="512"/>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut sollicitudin sapien. 
-			Mauris ac bibendum nisl. Nunc non tellus nec dolor viverra egestas ac id purus. 
-			Mauris rutrum odio non pretium dignissim. Suspendisse eget ligula quam. 
-			Mauris porttitor condimentum leo sed interdum. Morbi auctor ipsum dignissim sollicitudin suscipit. 
-			In varius magna vel augue pharetra tincidunt. Morbi placerat dolor in mollis egestas. 
-			Etiam in nunc nulla. Pellentesque augue nisi, blandit vitae eros eget, commodo suscipit orci. 
-			Quisque et risus venenatis, cursus nisl eu, euismod sem. Pellentesque lacus erat, 
-			ultricies et posuere sit amet, semper ut est. Sed efficitur ante accumsan, ullamcorper 
-			leo non, interdum velit. Mauris sit amet neque sed mi pretium convallis. </p>
+			<div>
+				<p><strong>Ferdinand Mueller (1825-96)</strong>, von Mueller from 1869, born Rostock, graduated Kiel,
+				in Australia from 1847, the greatest Australian scientist of the nineteenth century. A
+				prolific taxonomist, he was also an explorer and supporter of exploration, an
+				economic botanist, an inwards and outwards acclimatiser, a middle-man in supplying
+				European and American museums with zoological and ethnographical specimens.
+				Government Botanist of the Colony of Victoria from 1853 and Director of the
+				Melbourne Botanic Garden 1857-73, he was active outside Victoria, had an
+				international orientation, was elected to many national academies and regional
+				scientific societies around the world, and accumulated 22 knighthoods and a
+				hereditary Barony.</p>
+				<p>His correspondence informs studies of:</p>
+				<ul>
+					<li>botany and botanical history</li>
+					<li>the role of expertise in government service</li>
+					<li>exploration </li>
+					<li>social and economic history</li>
+					<li>science beyond the metropolis</li>
+					<li>science and empire</li>
+				</ul>
+			</div>
 		</div>
 	</body>
 </html>
