fix biographical details

--- a/html/home.html
+++ b/html/home.html
@@ -15,7 +15,7 @@
 		<div id="home-page">
 			<img alt="" src="image/mueller_18_years.jpg" width="400" height="512"/>
 			<div>
-				<p><strong>Ferdinand Mueller (1825-96)</strong>, von Mueller from 1869, born Rostock, graduated Kiel,
+				<p><strong>Ferdinand Mueller (1825-96)</strong>, von Mueller from December 1867, born Rostock, graduated Kiel,
 				in Australia from 1847, the greatest Australian scientist of the nineteenth century. A
 				prolific taxonomist, he was also an explorer and supporter of exploration, an
 				economic botanist, an inwards and outwards acclimatiser, a middle-man in supplying
