--- a/html/technology.html
+++ b/html/technology.html
@@ -3,12 +3,14 @@
 		<title>Technology</title>
 	</head>
 	<body>
-		<p>The software was developed for the Gardens by <a href="https://github.com/Conal-Tuohy">Conal Tuohy</a>, a freelance software 
+		<h1>Technology</h1>
+		<p>The software for this website was developed for the Gardens by <a href="https://github.com/Conal-Tuohy">Conal Tuohy</a>, a freelance software 
 		developer based in Brisbane.</p>
 		<p>There are two parts to the system:
 			<ul>
 				<li>a <a href="https://github.com/Conal-Tuohy/VMCP-upconversion">batch conversion process</a> which converts the 
-				corpus of more than 10,000 items of Mueller's correspondence from Microsoft Word format into TEI XML documents, and</li>
+				corpus of more than 10,000 items of Mueller's correspondence from Microsoft Word format into 
+				<a href="https://tei-c.org/guidelines/">TEI XML documents</a>, and</li>
 				<li>a <a href="https://github.com/Conal-Tuohy/vmcp">web application</a> which organises and presents the resulting TEI 
 				XML files in the form of this website.</li>
 			</ul>
