--- a/html/copyright.html
+++ b/html/copyright.html
@@ -3,6 +3,7 @@
 		<title>Copyright</title>
 	</head>
 	<body>
+<h1>Copyright</h1>
 <h2 id="text">Text</h2>
 <p>This website and its contents are the copyright of the Royal Botanic Gardens Board (trading as Royal Botanic Gardens Victoria). The text published here is distributed under a Creative Commons Attribution 4.0 international licence (<a href="https://creativecommons.org/licenses/by/4.0/legalcode">CC BY 4.0</a>). Usage under this licence is <a href="https://creativecommons.org/licenses/by/4.0/">summarised here</a>.</p>
 <h2 id="images">Images</h2>
