--- a/html/scope.html
+++ b/html/scope.html
@@ -3,6 +3,7 @@
 		<title>Scope</title>
 	</head>
 	<body>
+<h1>Scope</h1>
 <p>The publication of new letters on this site is ongoing. At its launch, over 11,200 letters were included, with over 3,000 items still to be processed. Letters are added to the site as they are completed. Editing letters can illuminate others already published, thus published letters are subject to change, especially in cross-reference notes. Occasionally, a newly edited letter leads to a better understanding of a letter previously edited, also resulting in changes. Accordingly, the date of access should always be stated when citing a letter.</p>
 <p><strong><em>Manuscript or typescript letters</em></strong> (including telegrams and fragments of letters) between Mueller and his correspondents are included, as are those between third parties that contain important information and contemporary views of issues. Where Mueller letters not otherwise found have been quoted in correspondence between third parties, the quoted part is included as a numbered item in the corpus. These items are published in a standard format (see <a href="https://vmcp.rbg.vic.gov.au/text/Preliminary/Editorial%20practice/">Editorial Practice</a>).</p>
 <p><strong><em>Published letters</em></strong> not otherwise found are indicated if they purport to be Mueller’s text, including those where only fragments of letters have been published. Some were explicitly intended by Mueller to be disseminated; others may have been private and published without his consent.</p>
