--- a/html/using-this-site.html
+++ b/html/using-this-site.html
@@ -3,6 +3,7 @@
 		<title>Using this site</title>
 	</head>
 	<body>
+<h1>Using this site</h1>
 <p>General usage notes for this site are provided below. User testing of the website has revealed a small number of issues that affect certain operations or outputs–these are indicated where appropriate. Accordingly, users should be aware of certain aspects of the site that might not perform as expected. Any additional issues should be reported to <a href="mailto:muellercorrespondence@rbg.vic.gov.au" class="email">muellercorrespondence@rbg.vic.gov.au</a>.</p>
 <p>Not all of the letters held by Royal Botanic Gardens Victoria are published here. In addition to those that have yet to be processed, any letters deemed by the editors not to be in a publishable state are excluded.</p>
 <p><strong>General searches:</strong> On all pages except the Search and Browse page there is a search box at the top right labelled ‘Search letters’. Search parameters may include single words linked by the operators AND, NOT or OR, wildcards (represented by an asterisk *), and phrases contained within quotation marks, such as “native plants”.</p>
