--- a/html/contact.html
+++ b/html/contact.html
@@ -3,7 +3,7 @@
 		<title>Contact Us</title>
 	</head>
 	<body>
-		<h1>Contact Us</h1>
+		<h1>Contact us</h1>
 		<p>To provide feedback or to enquire about the website, please contact us by <a id="email">email</a>. 
 		The website is a work in progress and suggestions for improvement are welcome.</p>
 		<script>
