update static page

--- a/html/editorial-practice.html
+++ b/html/editorial-practice.html
@@ -3,6 +3,7 @@
 		<title>Editorial practice</title>
 	</head>
 	<body>
+		<h1>Editorial practice</h1>
 		<h2 id="standard-format">Standard format</h2>
 		<p>A standard template for transcription has been used, comprising three meta-data fields, the transcribed text, and an additional meta data field if the item contains names of plants.</p>
 		<p><strong>Item number</strong>. Each item has a unique number based on the date of the item, e.g. 57.01.15a = second item of date 15 January 1857. Incomplete elements of the date are represented by ‘00’ e.g. 58.01.00 = item of date January 1858. Letters or fragments without any date are estimated, often as ‘earliest likely’ or ‘latest likely’ year and, if possible, month. Reasons for dating are given in the notes to the letter.</p>
