Change biographical register to html

--- a/html/contact.html
+++ b/html/contact.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title>Contact Us</title>
+		<title>Contact us</title>
 	</head>
 	<body>
 		<h1>Contact us</h1>
