try to make Muellers publications page to work

--- a/html/muellers-publications.html
+++ b/html/muellers-publications.html
@@ -2,7 +2,8 @@
 	<head>
 		<title>The published works of Ferdinand J. H. Mueller</title>
 	</head>
-	<body class="apparatus">
+	<body>
+      <div class="apparatus-html">
     <div class="last-updated">Last updated 13 March 2023.</div>
 
     <h1 class="tei-p rend-VMCP_title" lang="en">The published works of Ferdinand J. H. Mueller</h1>
@@ -28690,5 +28691,6 @@
         where the original publisher has either included the item in a later edition or has
         issued the item as a stand-alone piece using the same type, perhaps repaginated. When
         an item is issued by another publisher republished or republication is used. <a href="#ref2">...</a></p>
- </body>
+      </div>
+      </body>
 </html>
