well that did not work; remove notice

--- a/html/home.html
+++ b/html/home.html
@@ -6,19 +6,26 @@
 	</head>
 	<body>
 		<div id="home-page">
-				<div class="alert-notice">
-					<p><strong>Notice</strong> This site is in development. URLs – and some other stuff – are not stable yet.</p>
-				</div>
-				<p><img src="image/mueller_18_years.jpg" width="400" height="512" /></p>
-				<p><strong>Ferdinand Mueller (1825-96)</strong>, von Mueller from December 1867, born Rostock, graduated Kiel, in Australia from 1847, the greatest Australian scientist of the nineteenth century. A prolific taxonomist, he was also an explorer and supporter of exploration, an economic botanist, an inwards and outwards acclimatiser, a middle-man in supplying European and American museums with zoological and ethnographical specimens. Government Botanist of the Colony of Victoria from 1853 and Director of the Melbourne Botanic Garden 1857-73, he was active outside Victoria, had an international orientation, was elected to many national academies and regional scientific societies around the world, and accumulated 22 knighthoods and a hereditary Barony.</p>
+			<img alt="" src="image/mueller_18_years.jpg" width="400" height="512"/>
+			<div>
+				<p><strong>Ferdinand Mueller (1825-96)</strong>, von Mueller from December 1867, born Rostock, graduated Kiel,
+				in Australia from 1847, the greatest Australian scientist of the nineteenth century. A
+				prolific taxonomist, he was also an explorer and supporter of exploration, an
+				economic botanist, an inwards and outwards acclimatiser, a middle-man in supplying
+				European and American museums with zoological and ethnographical specimens.
+				Government Botanist of the Colony of Victoria from 1853 and Director of the
+				Melbourne Botanic Garden 1857-73, he was active outside Victoria, had an
+				international orientation, was elected to many national academies and regional
+				scientific societies around the world, and accumulated 22 knighthoods and a
+				hereditary Barony.</p>
 				<p>His correspondence informs studies of:</p>
 				<ul>
-				<li>botany and botanical history</li>
-				<li>the role of expertise in government service</li>
-				<li>exploration </li>
-				<li>social and economic history</li>
-				<li>science beyond the metropolis</li>
-				<li>science and empire</li>
+					<li>botany and botanical history</li>
+					<li>the role of expertise in government service</li>
+					<li>exploration </li>
+					<li>social and economic history</li>
+					<li>science beyond the metropolis</li>
+					<li>science and empire</li>
 				</ul>
 			</div>
 		</div>
