--- a/html/notes-on-life-and-work.html
+++ b/html/notes-on-life-and-work.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<h1>Notes on life and work</h1>
-		<p>When the young German botanist Ferdinand Müller <a href="https://trove.nla.gov.au/newspaper/article/48546438">arrived in Australia</a> shortly before Christmas 1847, he can scarcely have dreamed of the illustrious career that lay ahead of him, or of the shattering blows he would suffer along the way. Generally known by the Anglicised spelling of his name, Mueller, which he adopted after deciding to stay in Australia, he became famous as one of the first European scientists to explore and document parts of alpine Victoria<sup><a href="#fn1" id="ref1">1</a></sup>, northern and western Australia, and later as a promoter of scientific exploration expeditions in Australia, New Guinea and Antarctica. As Victoria’s Government Botanist from 1853 until his death in 1896 and as first Director of Melbourne’s renowned Botanic Garden, 1857–1873, he made fundamental contributions to the scientific knowledge of Australia’s plants. His immense output of scientific work<sup><a href="#fn2" id="ref2">2</a></sup> led to his becoming generally recognised as the ultimate authority on the subject not just in Victoria but throughout the then separate Australian colonies—a national authority before the nation ever came into existence. He was without question Australia’s leading scientist of the nineteenth century. His scientific eminence was also recognised internationally, as his election to a vast number of scientific societies around the world attests<sup><a href="#fn3" id="ref3">3</a></sup>, including the prestigious <a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/Mentions/Selected%20Mentions%20letters/M60-01-12-final/">Royal Society of London</a>, the <a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1890-6/1895/95-08-05-final/">Académie des Sciences</a> in Paris, the German national scientific academy (generally known as the <a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1850-9/1857/57-05-01-final/">Leopoldina</a>) and the <a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1890-6/1892/92-09-03-final/">American Academy of Arts and Sciences</a>. In 1888, the Royal Society of London bestowed on him one of the two <a href="https://www.jstor.org/stable/114852">Royal Medals</a> it awarded each year ‘for the two most important contributions to the advancement of Natural Knowledge, published originally in Her Majesty’s Dominions’ during the preceding ten years: no other Australian received one until after the Second World War. Civil honours were also showered upon him, including no fewer than twenty-two different knighthoods—the granting of the <a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1860-9/1867/67-12-20-final/">Knight’s Cross, 1st Class</a> of the Order of the Crown of Württemberg in 1867 adding “von” to his name—and, in 1871, a hereditary barony (<a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1870-9/1871/71-07-06-final/"><em>Freiherr</em></a>) also bestowed by the King of Württemberg.</p>
+		<p>When the young German botanist Ferdinand Müller <a href="https://trove.nla.gov.au/newspaper/article/48546438">arrived in Australia</a> shortly before Christmas 1847, he can scarcely have dreamed of the illustrious career that lay ahead of him, or of the shattering blows he would suffer along the way. Generally known by the Anglicised spelling of his name, Mueller, which he adopted after deciding to stay in Australia, he became famous as one of the first European scientists to explore and document parts of alpine Victoria<sup><a href="#fn1" id="ref1">1</a></sup>, northern and western Australia, and later as a promoter of scientific exploration expeditions in Australia, New Guinea and Antarctica. As Victoria’s Government Botanist from 1853 until his death in 1896 and as first Director of Melbourne’s renowned Botanic Garden, 1857–1873, he made fundamental contributions to the scientific knowledge of Australia’s plants. His immense output of scientific work<sup><a href="#fn2" id="ref2">2</a></sup> led to his becoming generally recognised as the ultimate authority on the subject not just in Victoria but throughout the then separate Australian colonies—a national authority before the nation ever came into existence. He was without question Australia’s leading scientist of the nineteenth century. His scientific eminence was also recognised internationally, as his election to a vast number of scientific societies around the world attests<sup><a href="#fn3" id="ref3">3</a></sup>, including the prestigious <a href="/id/M60-01-12">Royal Society of London</a>, the <a href="/id/95-08-05">Académie des Sciences</a> in Paris, the German national scientific academy (generally known as the <a href="/id/57-05-01">Leopoldina</a>) and the <a href="/id/92-09-03">American Academy of Arts and Sciences</a>. In 1888, the Royal Society of London bestowed on him one of the two <a href="https://www.jstor.org/stable/114852">Royal Medals</a> it awarded each year ‘for the two most important contributions to the advancement of Natural Knowledge, published originally in Her Majesty’s Dominions’ during the preceding ten years: no other Australian received one until after the Second World War. Civil honours were also showered upon him, including no fewer than twenty-two different knighthoods—the granting of the <a href="/id/67-12-20">Knight’s Cross, 1st Class</a> of the Order of the Crown of Württemberg in 1867 adding “von” to his name—and, in 1871, a hereditary barony (<a href="/id/71-07-06"><em>Freiherr</em></a>) also bestowed by the King of Württemberg.</p>
 		<p>Plain ‘Ferdinand Müller’ thus ended his days as a member of the nobility, as ‘Baron Ferdinand von Mueller’. He must surely have received more civil honours than any other Australian, and possibly more than any commoner anywhere. His awards gave him considerable social status, making him (in Vance Palmer’s words) ‘a great functionary—the second citizen of Victoria, while governors came and went’. When he gave a public address, the Governor was usually in the chair. His <a href="https://trove.nla.gov.au/newspaper/article/145930556">funeral</a> was a major public occasion, with thousands of his fellow citizens lining the route to the cemetery to watch his coffin pass by. Afterwards two separate public appeals were conducted to memorialise him, one leading to the construction of a large monument on his grave, the other endowing the Mueller Medal, awarded regularly for a century thereafter by the Australasian Association for the Advancement of Science (later ANZAAS) for outstanding contributions to natural science, ‘preference always given to work having special reference to Australasia’.</p>
 		<p>As well as publishing prodigiously, Mueller maintained a vast correspondence with all manner of people throughout Australia, and the world. Much of this has since been lost<sup><a href="#fn4" id="ref4">4</a></sup>, but more than enough has survived to provide a window into Mueller’s world, shedding new light not only on his own life and work, and on how he managed to achieve international recognition despite his isolation from his scientific peers, but more widely on intellectual and social life in nineteenth-century Australia, on the history of Australia more generally, and on the history of the sciences to which he contributed so notably.</p>
 		<h2 id="timeline-showing-some-key-dates-in-muellers-career.">Timeline showing some key dates in Mueller’s career.</h2>
@@ -50,17 +50,17 @@
 		<tr class="even">
 		<td>1846</td>
 		<td>May 12</td>
-		<td><a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1840-9/1845-9/46-05-12-final/">Matriculates</a> at University of Kiel.</td>
+		<td><a href="/id/46-05-12">Matriculates</a> at University of Kiel.</td>
 		</tr>
 		<tr class="odd">
 		<td>1847</td>
 		<td>July 21</td>
-		<td><a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1840-9/1845-9/47-07-08-final/">Sails for Australia</a> with his surviving sisters, Bertha and Clara.</td>
+		<td><a href="/id/47-07-08">Sails for Australia</a> with his surviving sisters, Bertha and Clara.</td>
 		</tr>
 		<tr class="even">
 		<td>—</td>
 		<td>August 2</td>
-		<td><a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1840-9/1845-9/47-08-02-final/">PhD degree</a> awarded by University of Kiel.</td>
+		<td><a href="/id/47-08-02">PhD degree</a> awarded by University of Kiel.</td>
 		</tr>
 		<tr class="odd">
 		<td>—</td>
@@ -80,27 +80,27 @@
 		<tr class="even">
 		<td>1852</td>
 		<td>August</td>
-		<td>Moves to <a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/Mentions/Selected%20Mentions%20letters/M52-08-11-final/">Victoria</a>.</td>
+		<td>Moves to <a href="/id/M52-08-11">Victoria</a>.</td>
 		</tr>
 		<tr class="odd">
 		<td>1853</td>
 		<td>January 26</td>
-		<td>Appointed Victoria’s first <a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1850-9/1853/53-01-26-final/">Government Botanist</a>.</td>
+		<td>Appointed Victoria’s first <a href="/id/53-01-26">Government Botanist</a>.</td>
 		</tr>
 		<tr class="even">
 		<td>1855</td>
 		<td>July</td>
-		<td>Departs with Augustus Gregory’s <a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1850-9/1855/55-07-09-final/">North Australian Exploring Expedition</a> for northern Australia.</td>
+		<td>Departs with Augustus Gregory’s <a href="/id/55-07-09">North Australian Exploring Expedition</a> for northern Australia.</td>
 		</tr>
 		<tr class="odd">
 		<td>1857</td>
 		<td>May 27</td>
-		<td><a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1850-9/1857/57-05-27-final/">Returns to Melbourne</a> and resumes appointment as Government Botanist.</td>
+		<td><a href="/id/57-05-27">Returns to Melbourne</a> and resumes appointment as Government Botanist.</td>
 		</tr>
 		<tr class="even">
 		<td>—</td>
 		<td>August 13</td>
-		<td>Appointed the first <a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1850-9/1857/57-08-13-final/">Director of Melbourne Botanic Garden</a>.</td>
+		<td>Appointed the first <a href="/id/57-08-13">Director of Melbourne Botanic Garden</a>.</td>
 		</tr>
 		<tr class="odd">
 		<td>1858</td>
@@ -115,7 +115,7 @@
 		<tr class="odd">
 		<td>—</td>
 		<td>September 7</td>
-		<td><a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1860-9/1861/61-09-25-final/">Death</a> of Ferdinand’s sister Bertha.</td>
+		<td><a href="/id/61-09-25">Death</a> of Ferdinand’s sister Bertha.</td>
 		</tr>
 		<tr class="even">
 		<td>1863</td>
@@ -125,17 +125,17 @@
 		<tr class="odd">
 		<td>1867</td>
 		<td>December 20</td>
-		<td><a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1860-9/1867/67-12-20-final/">Granted personal nobility</a> (i.e. ‘von’) by King of Württemberg.</td>
+		<td><a href="/id/67-12-20">Granted personal nobility</a> (i.e. ‘von’) by King of Württemberg.</td>
 		</tr>
 		<tr class="even">
 		<td>1871</td>
 		<td>July 6</td>
-		<td><a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1870-9/1871/71-07-06-final/">Granted hereditary barony</a> (‘Freiherr’) by King of Württemberg.</td>
+		<td><a href="/id/71-07-06">Granted hereditary barony</a> (‘Freiherr’) by King of Württemberg.</td>
 		</tr>
 		<tr class="odd">
 		<td>1873</td>
 		<td>July 1</td>
-		<td>Position of Director of Melbourne Botanic Garden <a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1870-9/1873/73-05-31-final/">abolished</a>.</td>
+		<td>Position of Director of Melbourne Botanic Garden <a href="/id/73-05-31">abolished</a>.</td>
 		</tr>
 		<tr class="even">
 		<td>1876</td>
@@ -150,7 +150,7 @@
 		<tr class="even">
 		<td>1879</td>
 		<td>May 24</td>
-		<td>Knighted <a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1870-9/1879/79-05-24-final/">KCMG</a>.</td>
+		<td>Knighted <a href="/id/79-05-24">KCMG</a>.</td>
 		</tr>
 		<tr class="odd">
 		<td>1890</td>
@@ -160,7 +160,7 @@
 		<tr class="even">
 		<td>1895</td>
 		<td>July 1</td>
-		<td>Elected Corresponding Member of <a href="https://vmcp.rbg.vic.gov.au/text/Mueller%20letters/1890-6/1895/95-08-05-final/">French Academy of Sciences</a>.</td>
+		<td>Elected Corresponding Member of <a href="/id/95-08-05">French Academy of Sciences</a>.</td>
 		</tr>
 		<tr class="odd">
 		<td>1896</td>
@@ -170,9 +170,9 @@
 		</tbody>
 		</table>
 		<p><sup id="fn1">1</sup> <a href="https://www.biodiversitylibrary.org/page/51351190">Gillbank</a> (2002); <a href="https://www.publish.csiro.au/hr/HR14003">Home</a> (2014). <a href="#ref1">…</a></p>
-		<p><sup id="fn2">2</sup> See <a href="https://vmcp.rbg.vic.gov.au/text/Apparatus%20files/Mueller&#39;s%20publications/M%20Publications/">Mueller’s publications</a> on this website. <a href="#ref2">…</a></p>
-		<p><sup id="fn3">3</sup> See <a href="https://vmcp.rbg.vic.gov.au/text/Apparatus%20files/Honours%20&amp;c/Honours%20Awards%20Memberships/">Honours, awards and memberships</a> on this website. <a href="#ref3">…</a></p>
-		<p><sup id="fn4">4</sup> See under ‘survival rate’ in <a href="https://vmcp.rbg.vic.gov.au/text/Preliminary/Scope/">Scope</a> on this website. <a href="#ref4">…</a></p>
+		<p><sup id="fn2">2</sup> See <a href="muellers-publications">Mueller’s publications</a> on this website. <a href="#ref2">…</a></p>
+		<p><sup id="fn3">3</sup> See <a href="honours-awards-memberships">Honours, awards and memberships</a> on this website. <a href="#ref3">…</a></p>
+		<p><sup id="fn4">4</sup> See under ‘survival rate’ in <a href="scope">Scope</a> on this website. <a href="#ref4">…</a></p>
 		<p><sup id="fn5">5</sup> See <a href="https://www.publish.csiro.au/hr/pdf/HR9961110013">Voigt and Sinkora</a> (1996) for early life. <a href="#ref5">…</a></p>
 	</body>
 </html>
