add site-wide email obfuscation, per issue #4

--- a/html/acknowledgement-of-indigenous-cultures.html
+++ b/html/acknowledgement-of-indigenous-cultures.html
@@ -10,20 +10,6 @@
 <p>Some of the correspondence held in the corpus of letters at Royal Botanic Gardens Victoria includes references to Indigenous Cultural Knowledge, such as the medicinal use of certain plants by Traditional Owners. In order to minimise the risk of exploitation of such knowledge, an exhaustive review of the letters was carried out to identify and exclude such letters from online publication. Approximately 96 letters have been excluded for this reason.</p>
 <p>The knowledge explicitly mentioned in these excluded letters will be subject to review by the Traditional Owners of that knowledge to determine whether they can be published online.</p>
 <p>If access to these excluded letters is required for academic research purposes, please contact the <a href="https://www.rbg.vic.gov.au/science/library/">Royal Botanic Gardens Victoria Library</a> with full details of your request. All requests will be assessed on a case-by-case basis with access granted at the discretion of the reviewing team.</p>
-<p>While every effort has been made to exclude all such examples of Indigenous Cultural Knowledge from the corpus, it is possible that certain instances may have been unintentionally overlooked. Please <a id="email">notify the editors</a> immediately in the event that a likely candidate for exclusion is discovered.</p>
-		<script>
-			user = 'vmc-feedback';
-			domain = 'rbg.vic.gov.au';
-			document
-				.getElementById('email')
-				.setAttribute(
-					'href',
-					'mail' +
-					'to:' + 
-					user + 
-					'@' + 
-					domain
-				);
-		</script>
+<p>While every effort has been made to exclude all such examples of Indigenous Cultural Knowledge from the corpus, it is possible that certain instances may have been unintentionally overlooked. Please <a href="mailto:vmc-feedback@rbg.vic.gov.au">notify the editors</a> immediately in the event that a likely candidate for exclusion is discovered.</p>
 	</body>
 </html>
