--- a/html/contact.html
+++ b/html/contact.html
@@ -4,21 +4,7 @@
 	</head>
 	<body>
 		<h1>Contact us</h1>
-		<p>To provide feedback or to enquire about the website, please contact us by <a id="email">email</a>. 
+		<p>To provide feedback or to enquire about the website, please contact us by <a href="mailto:vmc-feedback@rbg.vic.gov.au">email</a>. 
 		The website is a work in progress and suggestions for improvement are welcome.</p>
-		<script>
-			user = 'vmc-feedback';
-			domain = 'rbg.vic.gov.au';
-			document
-				.getElementById('email')
-				.setAttribute(
-					'href',
-					'mail' +
-					'to:' + 
-					user + 
-					'@' + 
-					domain
-				);
-		</script>
 	</body>
 </html>
