update static pages

--- a/html/contact.html
+++ b/html/contact.html
@@ -3,8 +3,7 @@
 		<title>Contact us</title>
 	</head>
 	<body>
-		<h1>Contact us</h1>
-		<p>To provide feedback or to enquire about the website, please contact us by <a href="mailto:vmc-feedback@rbg.vic.gov.au">email</a>. 
-		The website is a work in progress and suggestions for improvement are welcome.</p>
+		<h1 id="contact-us"><span id="anchor"></span>Contact us</h1>
+		<p>To provide feedback or to enquire about the website, please contact us by email. The website is a work in progress and suggestions for improvement are welcome.</p>
 	</body>
 </html>
