--- a/html/home.html
+++ b/html/home.html
@@ -8,29 +8,16 @@
 		<div id="home-page">
 			<img alt="" src="image/mueller_18_years.jpg" width="400" height="512"/>
 			<div>
-				<div class="alert-notice" style="background-color:rgba(255,0,0,.3);padding:0.5rem;border-radius:4px;margin-bottom:0.5rem">
-			                <p style="margin-bottom:0"><strong>Notice</strong> This site is still under development. The site is not responsive yet and we are still
-                     				working on the static pages. Most of it is working fine though and we are making the
-				                content available while we are resolving the remaining issues.</p>
-                  		</div>
-				<p><strong>Ferdinand Mueller (1825-96)</strong>, von Mueller from December 1867, born Rostock, graduated Kiel,
-				in Australia from 1847, the greatest Australian scientist of the nineteenth century. A
-				prolific taxonomist, he was also an explorer and supporter of exploration, an
-				economic botanist, an inwards and outwards acclimatiser, a middle-man in supplying
-				European and American museums with zoological and ethnographical specimens.
-				Government Botanist of the Colony of Victoria from 1853 and Director of the
-				Melbourne Botanic Garden 1857-73, he was active outside Victoria, had an
-				international orientation, was elected to many national academies and regional
-				scientific societies around the world, and accumulated 22 knighthoods and a
-				hereditary Barony.</p>
-				<p>His correspondence informs studies of:</p>
+				<p>The von Mueller Correspondence Project (VMCP) makes available to the public the majority of the surviving correspondence of Baron Ferdinand von Mueller. Mueller was Victoria’s first Government Botanist and the first Director of the Melbourne Botanic Garden.</p>
+				<p>Mueller’s correspondence is believed to have included over 100,000 letters. The VMCP team has located over 15,000 of these letters, with new items continuing to emerge. These documents have been digitally transcribed, translated into English where written in other languages, annotated and indexed so that they can be searched.</p>
+				<p>These documents are of particular interest to botanists, historians, and sociologists, providing insights into many different aspects of Australian life in the second half of the 19th century, particularly:</p>
 				<ul>
-					<li>botany and botanical history</li>
-					<li>the role of expertise in government service</li>
-					<li>exploration </li>
-					<li>social and economic history</li>
-					<li>science beyond the metropolis</li>
-					<li>science and empire</li>
+				<li>botany and botanical history</li>
+				<li>the role of expertise in government service</li>
+				<li>exploration</li>
+				<li>social and economic history</li>
+				<li>science beyond the metropolis</li>
+				<li>science and empire</li>
 				</ul>
 			</div>
 		</div>
