update static pages: and now for reals

--- a/html/notes-on-life-and-work.html
+++ b/html/notes-on-life-and-work.html
@@ -158,8 +158,8 @@
 		</tbody>
 		</table>
 		<p>1 <a href="https://www.biodiversitylibrary.org/page/51351190">Gillbank</a> (2002); <a href="https://www.publish.csiro.au/hr/HR14003">Home</a> (2014). <a href="#ref1">…</a></p>
-		<p>2 See <a href="https://vmcp.rbg.vic.gov.au/text/Apparatus%20files/Mueller&#39;s%20publications/M%20Publications/">Mueller’s publications</a> on this website. <a href="#ref2">…</a></p>
-		<p>3 See <a href="https://vmcp.rbg.vic.gov.au/text/Apparatus%20files/Honours%20&amp;c/Honours%20Awards%20Memberships/">Honours, awards and memberships</a> on this website. <a href="#ref3">…</a></p>
+		<p>2 See <a href="https://vmcp.rbg.vic.gov.au/text/static/apparatus/muellers-publications/">Mueller’s publications</a> on this website. <a href="#ref2">…</a></p>
+		<p>3 See <a href="https://vmcp.rbg.vic.gov.au/text/static/apparatus/honours-awards-memberships/">Honours, awards and memberships</a> on this website. <a href="#ref3">…</a></p>
 		<p>4 See under ‘survival rate’ in <a href="https://vmcp.rbg.vic.gov.au/text/Preliminary/Scope/">Scope</a> on this website. <a href="#ref4">…</a></p>
 		<p>5 See <a href="https://www.publish.csiro.au/hr/pdf/HR9961110013">Voigt and Sinkora</a> (1996) for early life. <a href="#ref5">…</a></p>
 	</body>
