remove capitals in headings

--- a/html/using-this-site.html
+++ b/html/using-this-site.html
@@ -26,7 +26,7 @@
 		<p><strong>Recipient</strong>: the person or organisation to which the item was addressed. In some cases, no specific person or organisation was addressed, and the nature of the document is described, e.g., ‘Testimonial’, or ‘Circular’.</p>
 		<p><strong>Taxon name:</strong> The names of taxa, or apparent taxa, generated as a metadata list for each letter. See <a href="file:///C:/Users/nklazenga/Downloads/Preliminary%20updated/Editorial%20practice.doc">Editorial practice</a> for an explanation of the derivation of this list. Note that taxon names may be capitalised in some source documents, thus <em>Eucalyptus viminalis</em> was sometimes written <em>Eucalyptus Viminalis</em>. The find function in your browser can typically be set to match case, but to detect capitalisation variants in taxon names it is better to ignore case whilst searching.</p>
 		<p>Not that filter selections will not automatically clear between searches; they must be manually deselected or the page refreshed before initiating a new search of the full corpus.</p>
-		<h2 id="advanced-search"><span id="anchor"></span>Advanced Search</h2>
+		<h2 id="advanced-search"><span id="anchor"></span>Advanced search</h2>
 		<p>An advanced search can be made using the five search boxes on the Search page. These allow users to search by:</p>
 		<ul>
 		<li><strong><em>Text</em></strong> searches the content of the transcription in the same manner as the general search box described above. In the summary list of letters found, the term(s) used in the search are shown in red in the letter title/excerpt. Clicking on a highlight will open the relevant letter at the place where the term occurs.</li>
